# Production-Trikaal-Netra-Webapp-Monolith

./: TEST_DEV.md  TEST_MAIN.md  TEST_STAGING.md  TEST_STAGING_TRIGGER.md  dev.sh  docker-compose.yml  fullstack-designpattern-guide.txt  package-lock.json  package.json
backend/: .env.example  (+12 more)
rag-base/: .dockerignore  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  Makefile  README.md  TEST_SUMMARY.md  allowed_models.json  api-document-pavan.md  api.py  api2.py  chat_app.py  config_app.py  config_app_1.py  deploy-to-gcp.sh  doc.txt  docker-compose.prod.yaml  docker-compose.source.yaml  docker-compose.yaml  example_server.py  llm_client_with_mcp.py  mcp_server_entry.json  mongo.txt  pull_model.sh  pyproject.toml  random_doc.txt  rough_implementation_idea.md  run_server.py  start_services.sh  zensical.toml
rag-base/.agents/: AGENTS.md
rag-base/.github/: copilot-instructions.md
rag-base/blurgs_observability/: __init__.py
rag-base/blurgs_observability/decorators/: __init__.py  tracing_function.py
rag-base/config_generation_app/: README.md  text_processor.py
rag-base/config_generation_app/sources/: __init__.py  base.py  clickhouse.py  mongo.py  page_navigator.py  text_files.py
rag-base/core/clients/: chat_db_client.py  chroma_client.py  minio_client.py
rag-base/core/schemas/: chat.py
rag-base/core/utils/: ingest_to_chroma.py  jwt_auth.py  logger.py  security.py  session_auth.py  test_helpers.py
rag-base/data/: Cosmic_Grid_XRay.txt  test_file.txt
rag-base/docker/: testing-infra-compose.yaml
rag-base/dockerfiles/: Dockerfile.api  Dockerfile.chat-app  Dockerfile.chroma  Dockerfile.config-generation  Dockerfile.tool-server
rag-base/docs/: adding_new_sources.md  index.md  rag_chatbot_brochure.md
rag-base/docs/icd/: GENERATE_RESPONSE_PROTOCOL.md  INTERFACE_CONTROL_DOCUMENT.md  MESSAGE_RETRIEVAL_PROTOCOL.md  SESSION_CREATION_PROTOCOL.md  diagram-create-session.mmd  diagram-retrieve-chats.mmd  diagram-retrieve-messages.mmd  diagram-stream-message.mmd
rag-base/rag_configs/: new_compose_config.yaml  page_nav_config.yaml  placeholder_config.yaml  three_config.yaml  tool_registry.yaml
rag-base/requirements/: requirements-api.txt  requirements-chat-app.txt  requirements-config-generation.txt  requirements-tool-server.txt
rag-base/scripts/: check_chroma_counts.py  chroma_report.py  ingest_config_yaml.py  ingest_document.py  ingest_new_config.py  jwt_for_tests.py  seed_config.py
rag-base/tests/: conftest.py  manual_test_clickhouse_query.py  manual_test_mcp_client.py  test_config.yaml  test_dynamic_ingestion_flow.py  test_resource_refresh_notification.py  use_client.py  verify_ingestion.py
rag-base/tool_client/: client.py  test_client.py
rag-base/tool_server/: server.py
(+980 files in other folders)
