[project]
name = "poc-omnisense-rag-base"
version = "0.1.0"
description = "Omnisense RAG base project"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "blurgs-observability",
    "bson>=0.5.10",
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "openai>=2.45.0",
    "pymongo>=4.17.0",
]

[dependency-groups]
shared = [
    "blurgs-observability",
    "colorlog>=6.10.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
tool-server = [
    { include-group = "shared" },
    "bcrypt>=5.0.0",
    "chromadb>=1.4.1",
    "clickhouse-connect>=1.4.2",
    "docx2txt>=0.9",
    "fastapi>=0.138.0",
    "fastmcp>=3.4.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "mcp>=1.28.0",
    "minio>=7.2.20",
    "openai>=2.44.0",
    "pymongo>=4.17.0",
    "pypdf>=6.14.2",
    "uvicorn>=0.50.2",
    "watchdog>=6.0.0",
]
api = [
    { include-group = "shared" },
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.128.0",
    "google-genai>=1.59.0",
    "langchain>=0.1.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.0.1",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "mcp[cli]>=1.25.0",
    "minio>=7.2.20",
    "ollama>=0.1.0",
    "openai>=2.15.0",
    "pymongo>=4.16.0",
    "uvicorn>=0.40.0",
]
chat-app = [
    { include-group = "shared" },
    "pymongo>=4.16.0",
    "streamlit>=1.53.0",
]
tool-client = [
    { include-group = "shared" },
    "mcp[cli]>=1.25.0",
]
config-generation = [
    { include-group = "shared" },
    "chromadb>=0.4.0",
    "langchain>=0.1.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.0.1",
    "langchain-ollama>=1.0.1",
    "ollama>=0.1.0",
    "streamlit>=1.53.0",
]
dev = [
    { include-group = "shared" },
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "locust>=2.32.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "core*",
    "tool_client*",
    "tool_server*",
    "config_generation_app*",
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "uv"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
blurgs-observability = { path = "libs/blurgs_observability-1.2.3-py3-none-any.whl" }

[tool.uv]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require external services (Docker, MCP server). Deselect with -m 'not integration'.",
    "streaming: marks tests for the POST /stream endpoint.",
]
